fixed alignment of the icon in article

--- a/docs/doks-theme/_sass/components/_hero-subheader.scss
+++ b/docs/doks-theme/_sass/components/_hero-subheader.scss
@@ -45,7 +45,7 @@
 .hero-subheader__icon {
 	width: 128px;
 	float: right;
-	margin-top: -32px;
+	margin-top: -10px;
 }
 
 /* ----- Description ----- */
